--- a/quickStart/pom.xml
+++ b/quickStart/pom.xml
@@ -1,25 +1,16 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.example</groupId>
+        <artifactId>demo</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>demo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <name>demo</name>
-    <description>demo</description>
-    <modules>
-        <module>quickStart</module>
-    </modules>
-    <properties>
-        <java.version>17</java.version>
-    </properties>
+    <groupId>org.example</groupId>
+    <artifactId>quickStart</artifactId>
+    <packaging>war</packaging>
+    <name>quickStart Maven Webapp</name>
+    <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -47,5 +38,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
